popularity-contest (1.19) unreleased; urgency=low

  * Translations
    - Turkish by Recai Oktas. Closes: #244164
    - Russian update. Closes: #245000
    - Slovak by Miroslav Kure. Closes: #245672

 -- Christian Perrier <bubulle@debian.org>  Sun, 25 Apr 2004 12:50:11 +0200

popularity-contest (1.18) unstable; urgency=low

  * Bill Allombert
    - debian/postinst:
      + Fix previous attempt to fix MY_HOSTID being equal to EMPTYID.
      + Fix bogus MY_HOSTID generated by popcon releases affected by #203841.
        Closes: #240603
      + Remove check for an impossible error condition.
    - Add FAQ:
      + Document valid sender domain problem. Closes: #241383
      + Document the noatime problem. Closes: #239939
    - README, debian/popularity.contest.8:
      + Add pointers to the FAQ.
    - sync server-side scripts with popcon.debian.org:
      + Address bug #238004 in popcon.pl w.r.t. wording of per-maintainer
        reports.
  * Translations
    - Basque added by Piarres Beobide. Closes: #243768
    - French update (removed first person) by Christian Perrier

 -- Bill Allombert <ballombe@debian.org>  Fri, 16 Apr 2004 14:25:04 +0200

popularity-contest (1.17) unstable; urgency=medium

  * Translations
    - Hungarian by VEROK Istvan. Closes: #242288
    - Polish by Bartosz Fenski. Closes: #242360
    - Dutch by Bart Cornelis. Closes: #242382
    - Hebrew by Lior Kaplan
    - Indonesian by Parlin Imanuel Toh. Closes: #243296
  * Petter Reinholdtsen
    - Uploaded with urgency=medium to get the new translations into
      Sarge quickly.

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 13 Apr 2004 10:05:36 +0200

popularity-contest (1.16) unstable; urgency=medium

  * Christian Perrier
    - Updated Korean debconf translation by Changwoo Ryu
    - New Ukrainian debconf translation by Eugeniy Meshcheryakov
      Closes: #239348
    - Updated Danish debconf translation by Morten Brix Pedersen
      Closes: #239824